# sdf

./: .gitignore  Cargo.toml  DETAILS.md  ISSUES.md  LICENSE  README.md  TODO.md  build.rs  dump.txt  params.txt  win32.bat
assets/: build.bat  depth_occlusion_cs.spirv  draw_equirect_fs.spirv  draw_equirect_vs.spirv  lighting_cs.spirv  measure_cs.spirv  projector_equirect_fs.spirv  projector_equirect_vs.spirv  tiler.spirv  viewer_depth_occlusion.spirv  viewer_lighting.spirv  yardstick.spirv
assets/glsl/: base.glsl  brdf.glsl  consult.glsl  depth_occlusion_cs.glsl  draw_equirect_fs.glsl  draw_equirect_vs.glsl  lighting.glsl  lighting_cs.glsl  march.glsl  measure_cs.glsl  palette.glsl  progress.glsl  projector_equirect_fs.glsl  projector_equirect_vs.glsl  (+8 more)
formulas/: AmazingBox2.md  _Rotate4d.md  koch_cube.md
logs/: 01.md  06.md  09.md  10.md  14.md  15.md  19.md  21.md  22.md  23.md  24.md  25.md  26.md  27.md
mb3d/: AmazingBox.txt  koch_cube00.txt  koch_cube01.txt  recombination.txt
old/: 706.r16
shaders/: amazingbox2.glsl  amazingsurf.glsl  benesipine.glsl  build.sh  bulboxp2.glsl  cosinepow2.glsl  engine.glsl  engine.spirv  kochcube.glsl  mandelbox.glsl  mandelbulb.glsl  menger3.glsl  polyfoldsym.glsl  quickdudley.glsl  reciprocalz3b.glsl  rotate4d.glsl  sierphilbert.glsl
src/: base.rs  engine.rs  ffi-full.rs  ffi-reduced.rs  main.rs  projector.rs  system.rs  tiler.rs  viewer.rs  yardstick.rs
states/: amazingbox2-zoom0.1.txt  crooked_town.txt  koch_surf.txt  mandelbulb_init.txt  menger3.txt  polyfold-5-koch_cube.txt  polyfold-5-menger3.txt  sierphilbert.txt
(+112 files in other folders)
