[package]
name = "sdf"
version = "0.1.0"
authors = ["Desmond Germans <desmond@germansmedia.nl>"]
edition = "2021"

[profile.dev]
opt-level = 0
debug = true
lto = true

[profile.release]
opt-level = 3
debug = false
lto = "fat"
codegen-units = 1

[dependencies]
macros = { path = "../e/macros" }
base = { path = "../e/base" }
gpu = { path = "../e/gpu" }
hal = { path = "../e/hal" }
