[package]
name = "sdf"
version = "0.1.0"
authors = ["Desmond Germans <desmond@germansmedia.nl>"]
edition = "2021"

[profile.dev]
opt-level = 0
debug = true
lto = true

[profile.release]
opt-level = 3
debug = false
lto = "fat"
codegen-units = 1

[dependencies]
e_macros = { path = "../e/macros",package = "macros" }
e_base = { path = "../e/base",package = "base" }
e_gpu = { path = "../e/gpu",package = "gpu" }
e_hal = { path = "../e/hal",package = "hal" }
e_codec_image = { path = "../e/codec_image",package = "codec_image" }
